src/css/inserter-card.scss
/***********
* Block card
***********/
.maxi-sidebar {
	.block-editor-block-icon {
		flex: 0;
		height: 16px;
		width: 16px;
		margin: 0;

		svg {
			width: 16px;
			height: 16px;
			min-width: 16px;
			min-height: 16px;
			max-width: 16px;
			max-height: 16px;
		}
	}
	.block-editor-block-inspector.maxi-controls {
		.block-editor-block-card {
			position: relative;
			margin: 0 0 8px 0 !important;
			padding: 8px;
			color: #fff;
			border-bottom: 1px solid #dbdde6;
			background: #fff;
			letter-spacing: 0;

			&__content {
				margin: 0 0 0 8px;
			}
			&__title {
				margin: 0 0 2px 0;
				font-size: 14px;
				font-weight: 500;
				line-height: unset;
			}
			&__description {
				display: block;
				width: 100%;
				margin: 0;
			}
		}
	}
}

